--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h3 class="text-info text-">{% block title %}Главная{% endblock %}</h3>
+<h3 class="text-info">{% block title %}Главная{% endblock %}</h3>
 {% endblock %}
 
 {% block content %}
