--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <link href={{url_for('static', filename='floating-labels.css' )}}>
     <link rel="stylesheet" type="text/css" href={{url_for('static', filename='bootstrap.min.css' )}}>
-    <link rel="stylesheet" type="text/css" href={{url_for('static', filename='bootstrap.min.js' )}}>
     <meta charset="UTF-8">
     <style type="text/css">
         .pictobutton
         {
+        margin: 0px;
         height: 30px;
         width: 30px;
         }
@@ -17,54 +17,59 @@
     <title>{% block title %}{% endblock %} - Должник</title>
 </head>
 <body>
-
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-sm-4 border bg-light">
-            <nav>
-                <div class="container mt-2 mb-2">
-                    <ul class="nav nav-pills flex-sm-column justify-content-between">
-                        <li class="nav-item">
-                            <h3>
-                                {% if g.budget_file == '' %}
-                                <a class="nav-link active" href="{{url_for('main')}}">Главная</a>
-                                {% else %}
-                                <a class="nav-link" href="{{url_for('main')}}">Главная</a>
-                                {% endif %}
-                            </h3>
-                        </li>
-                        {% for budget in g.saved_budgets %}
-                        <li class="nav-item">
-                            {% if g.budget_file == budget %}
-                                <a class= "nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="Посмотреть отчёт">
-                                    {{budget[:-4]}}
-                                </a>
+        <div class="col-sm-auto border bg-light">
+            <div class="container my-2">
+                <ul class="nav nav-pills flex-sm-column">
+                    <li class="nav-item">
+                        <h3>
+                            {% if g.budget_file == '' %}
+                            <a class="nav-link active" href="{{url_for('main')}}">Главная</a>
                             {% else %}
-                                <a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="Посмотреть отчёт">
-                                    {{budget[:-4]}}
-                                </a>
+                            <a class="nav-link" href="{{url_for('main')}}">Главная</a>
                             {% endif %}
-                            <!--<a href="{{url_for('edit_budget', budget_file=budget)}}" title="Редактировать">-->
-                                <!--<img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"-->
-                                     <!--class="pictobutton"></a>-->
-
-                            <!--<a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"-->
-                               <!--class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">-->
-                                <!--<img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"-->
-                                     <!--class="pictobutton"></a>-->
-
-                            <!--<a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"-->
-                               <!--class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">-->
-                                <!--<img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"-->
-                                     <!--class="pictobutton"></a>-->
+                        </h3>
+                    </li>
+                    <div class="container w-100"></div>
+                    <div class="d-flex flex-nowrap flex-sm-column">
+                        {% for budget in g.saved_budgets %}
+                        <li class="nav-item d-flex flex-column">
+                            {% if g.budget_file == budget %}
+                                <a class="nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
+                            {% else %}
+                                <a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
+                            {% endif %}
+                                    {% if budget.__len__() > 15%}
+                                        {{budget[0:11]+'...'}}
+                                    {% else %}
+                                        {{budget[:-4]}}
+                                    {% endif%}
+                                </a>
+                                {% if g.budget_file == budget %}
+                                    <div class="d-flex flex-row justify-content-between py-2">
+                                        <a href="{{url_for('print_budget', budget_file=budget)}}" title="Редактировать">
+                                        <img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"
+                                             class="pictobutton"></a>
+                                        <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
+                                           class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">
+                                        <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
+                                             class="pictobutton"></a>
+                                        <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
+                                           class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">
+                                        <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
+                                             class="pictobutton"></a>
+                                    </div>
+                                {% endif %}
                         </li>
                         {% endfor %}
-                    </ul>
-                </div>
-            </nav>
+                    </div>
+                </ul>
+            </div>
         </div>
         <div class="col-sm">
             {% block header %}{% endblock %}
+            <hr>
             {% block content %}{% endblock %}
         </div>
     </div>
@@ -75,7 +80,10 @@
     </div>
 </div>
 
-<script src="{{url_for('static', filename='confirmBudgetAction.js')}}"></script>
+<script src={{url_for('static', filename='confirmBudgetAction.js')}}></script>
+<!--<script src={{url_for('static', filename='jquery-slim.min.js' )}}></script>-->
+<!--<script src={{url_for('static', filename='popper.min.js' )}}></script>-->
+<!--<script src={{url_for('static', filename='bootstrap.min.js' )}}></script>-->
 
 </body>
 </html>
