--- a/templates/base.html
+++ b/templates/base.html
@@ -68,9 +68,16 @@
             </div>
         </div>
         <div class="col-sm">
-            {% block header %}{% endblock %}
-            <hr>
-            {% block content %}{% endblock %}
+            <div class="row">
+                <div class="col-12 align-items-center">
+                    <h3 class="text-info text-center">
+                    {% block header %}{% endblock %}
+                    </h3>
+                </div>
+                <div class="col">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
         </div>
     </div>
     <div class="row justify-content-center">
