--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h3 class="text-info">{% block title %}Главная{% endblock %}</h3>
+{% block title %}Главная{% endblock %}
 {% endblock %}
 
 {% block content %}
