--- a/templates/base.html
+++ b/templates/base.html
@@ -19,53 +19,84 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-sm-auto border bg-light">
-            <div class="container my-2">
-                <ul class="nav nav-pills flex-sm-column">
-                    <li class="nav-item">
-                        <h3>
-                            {% if g.budget_file == '' %}
-                            <a class="nav-link active" href="{{url_for('main')}}">Главная</a>
-                            {% else %}
+        <div class="col col-sm-4 border bg-light">
+            <nav class="navbar navbar-expand-sm navbar-light bg-light flex-column align-items-start">
+                <div class="container-fluid justify-content-between">
+                    <a class="navbar-brand" href="{{url_for('main')}}">Должник</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto flex-column">
+                        {% if g.budget_file == '' %}
+                        <li class="nav-item active">
+                        {% else %}
+                        <li class="nav-item">
+                        {% endif %}
                             <a class="nav-link" href="{{url_for('main')}}">Главная</a>
-                            {% endif %}
-                        </h3>
-                    </li>
-                    <div class="container w-100"></div>
-                    <div class="d-flex flex-nowrap flex-sm-column">
-                        {% for budget in g.saved_budgets %}
-                        <li class="nav-item d-flex flex-column">
-                            {% if g.budget_file == budget %}
-                                <a class="nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
-                            {% else %}
-                                <a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
-                            {% endif %}
-                                    {% if budget.__len__() > 15%}
-                                        {{budget[0:11]+'...'}}
-                                    {% else %}
-                                        {{budget[:-4]}}
-                                    {% endif%}
-                                </a>
-                                {% if g.budget_file == budget %}
-                                    <div class="d-flex flex-row justify-content-between py-2">
-                                        <a href="{{url_for('print_budget', budget_file=budget)}}" title="Редактировать">
-                                        <img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"
-                                             class="pictobutton"></a>
-                                        <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
-                                           class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">
-                                        <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
-                                             class="pictobutton"></a>
-                                        <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
-                                           class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">
-                                        <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
-                                             class="pictobutton"></a>
-                                    </div>
-                                {% endif %}
                         </li>
-                        {% endfor %}
-                    </div>
-                </ul>
-            </div>
+                        <div class="dropdown">
+                            <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Бюджеты
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% for budget in g.saved_budgets %}
+                                    {% if g.budget_file == budget %}
+                                        <a class="small dropdown-item active" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
+                                            {{budget[:-4]}}
+                                        </a>
+                                    {% else %}
+                                        <a class="small dropdown-item" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">
+                                            {{budget[:-4]}}
+                                        </a>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">О нас</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+
+                    <!--<div class="container w-100"></div>-->
+                    <!--<div class="d-flex flex-nowrap flex-sm-column">-->
+                        <!--{% for budget in g.saved_budgets %}-->
+                        <!--<li class="nav-item d-flex flex-column">-->
+                            <!--{% if g.budget_file == budget %}-->
+                                <!--<a class="nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">-->
+                            <!--{% else %}-->
+                                <!--<a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">-->
+                            <!--{% endif %}-->
+                                    <!--{% if budget.__len__() > 15%}-->
+                                        <!--{{budget[0:11]+'...'}}-->
+                                    <!--{% else %}-->
+                                        <!--{{budget[:-4]}}-->
+                                    <!--{% endif%}-->
+                                <!--</a>-->
+                                <!--{% if g.budget_file == budget %}-->
+                                    <!--<div class="d-flex flex-row justify-content-between py-2">-->
+                                        <!--<a href="{{url_for('print_budget', budget_file=budget)}}" title="Редактировать">-->
+                                        <!--<img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"-->
+                                             <!--class="pictobutton"></a>-->
+                                        <!--<a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"-->
+                                           <!--class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">-->
+                                        <!--<img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"-->
+                                             <!--class="pictobutton"></a>-->
+                                        <!--<a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"-->
+                                           <!--class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">-->
+                                        <!--<img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"-->
+                                             <!--class="pictobutton"></a>-->
+                                    <!--</div>-->
+                                <!--{% endif %}-->
+                        <!--</li>-->
+                        <!--{% endfor %}-->
+                    <!--</div>-->
+                <!--</ul>-->
+            <!--</div>-->
         </div>
         <div class="col-sm">
             <div class="row">
@@ -88,9 +119,9 @@
 </div>
 
 <script src={{url_for('static', filename='confirmBudgetAction.js')}}></script>
-<!--<script src={{url_for('static', filename='jquery-slim.min.js' )}}></script>-->
-<!--<script src={{url_for('static', filename='popper.min.js' )}}></script>-->
-<!--<script src={{url_for('static', filename='bootstrap.min.js' )}}></script>-->
+<script src={{url_for('static', filename='jquery-3.0.0.min.js' )}}></script>
+<script src={{url_for('static', filename='popper.min.js' )}}></script>
+<script src={{url_for('static', filename='bootstrap.min.js' )}}></script>
 
 </body>
 </html>
