--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,9 @@
     <div class="row">
         <div class="col col-sm-4 border bg-light">
             <nav class="navbar navbar-expand-sm navbar-light bg-light flex-column align-items-start">
-                <div class="container-fluid justify-content-between">
+                <div class="container-fluid justify-content-between align-content-center flex-wrap">
                     <a class="navbar-brand" href="{{url_for('main')}}">Должник</a>
+                    <p class="text-info my-0"></p>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -60,49 +61,12 @@
                     </ul>
                 </div>
             </nav>
-
-
-                    <!--<div class="container w-100"></div>-->
-                    <!--<div class="d-flex flex-nowrap flex-sm-column">-->
-                        <!--{% for budget in g.saved_budgets %}-->
-                        <!--<li class="nav-item d-flex flex-column">-->
-                            <!--{% if g.budget_file == budget %}-->
-                                <!--<a class="nav-link active" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">-->
-                            <!--{% else %}-->
-                                <!--<a class= "nav-link" href="{{url_for('edit_budget', budget_file=budget)}}" title="{{budget[:-4]}}">-->
-                            <!--{% endif %}-->
-                                    <!--{% if budget.__len__() > 15%}-->
-                                        <!--{{budget[0:11]+'...'}}-->
-                                    <!--{% else %}-->
-                                        <!--{{budget[:-4]}}-->
-                                    <!--{% endif%}-->
-                                <!--</a>-->
-                                <!--{% if g.budget_file == budget %}-->
-                                    <!--<div class="d-flex flex-row justify-content-between py-2">-->
-                                        <!--<a href="{{url_for('print_budget', budget_file=budget)}}" title="Редактировать">-->
-                                        <!--<img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"-->
-                                             <!--class="pictobutton"></a>-->
-                                        <!--<a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"-->
-                                           <!--class="confirm-required" message="Удалить бюджет &quot;{{budget}}&quot;?">-->
-                                        <!--<img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"-->
-                                             <!--class="pictobutton"></a>-->
-                                        <!--<a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"-->
-                                           <!--class="confirm-required" message="Создать копию бюджета &quot;{{budget}}&quot;?">-->
-                                        <!--<img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"-->
-                                             <!--class="pictobutton"></a>-->
-                                    <!--</div>-->
-                                <!--{% endif %}-->
-                        <!--</li>-->
-                        <!--{% endfor %}-->
-                    <!--</div>-->
-                <!--</ul>-->
-            <!--</div>-->
         </div>
         <div class="col-sm">
             <div class="row">
                 <div class="col-12 align-items-center">
                     <h3 class="text-info text-center">
-                    {% block header %}{% endblock %}
+                        {% block header %}{% endblock %}
                     </h3>
                 </div>
                 <div class="col">
