--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,7 +4,7 @@
 
 {% block title %}
 {% if budget_file %}
-    "{{budget_file[:-4]}}"
+"{{budget_file[:-4:]}}"
 {% else %}
     Бюджет не выбран
 {% endif %}
@@ -13,6 +13,23 @@
 {% endblock %}
 
 {% block content %}
+
+<div class="d-flex flex-wrap align-items-center justify-content-between">
+    <p class="text-info my-0">Действия с бюджетом:</p>
+    <div class="d-flex flex-row py-2 px-2">
+        <a href="{{url_for('print_budget', budget_file=budget_file)}}" title="Отчёт">
+            <img src={{url_for('static', filename='report.png' )}} alt="Отчёт" border="0"
+                 class="pictobutton mx-2"></a>
+        <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
+           class="confirm-required" message="Создать копию бюджета &quot;{{budget_file[:-4:]}}&quot;?">
+            <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
+                 class="pictobutton mx-2"></a>
+        <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
+           class="confirm-required" message="Удалить бюджет &quot;{{budget_file[:-4:]}}&quot;?">
+            <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
+                 class="pictobutton mx-2"></a>
+    </div>
+</div>
 
 <h4 class="text-center pt-2">Траты</h4>
 
@@ -186,19 +203,6 @@
 
         </div>
     </form>
-    <!--<form class="d-flex flex-row align-items-end px-1"-->
-          <!--method="post" name="editbudgetmemo"-->
-          <!--action="{{url_for('budget.edit_memo')}}">-->
-        <!--<div class="form-group">-->
-            <!--<label for="memo">Описание</label>-->
-            <!--<div class="d-flex flex-row">-->
-                <!--<input type="text" class="form-control" id="memo" name="memo" value="{{budget.memo}}" size="20">-->
-                <!--<input type="image" src="{{url_for('static', filename='ok.png')}}" alt="Ок" class="pictobutton">-->
-                <!--&lt;!&ndash;<input type="submit" class="btn btn-primary" value="Ок">&ndash;&gt;-->
-            <!--</div>-->
-            <!--<small class="form-text text-primary">Не забудьтье отпавить форму</small>-->
-        <!--</div>-->
-    <!--</form>-->
 </div>
 
 {% endblock %}
