--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -1,74 +1,93 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1>
 {% block title %}
-    "
 {% if budget_file %}
-    {{budget_file[:-4]}}
+    "{{budget_file[:-4]}}"
 {% else %}
     Файл не выбран
 {% endif %}
-    "
     {% if index == -1%}
     - Новая трата
     {% else %}
     - Трата № {{index+1}}
     {% endif %}
 {% endblock %}
-</h1>
 {% endblock %}
 
 {% block content %}
-<hr>
 
-
-<form name="editspendinghead" method="post" id="editspendinghead"
-      action="{{url_for('spending.edit_head')}}">
-    <table border="0" cellpadding="3" rules="rows">
-        <tr>
-            <td><b>Дата</b></td><td><b>Сумма</b></td><td><b>Описание</b></td><td><b>Оплатил</b></td>
-        </tr>
-        <tr>
-            <td>
-                <input name="spendingdate" type="text" value="{{spending.get_date_s()}}" size="10">
-            </td>
-            <td>
-                <input name="spendingamount" type="text" value="{{spending.amount}}" size="10">
-            </td>
-            <td>
-                <input name="spendingmemo" type="text" value="{{spending.memo}}" size="20">
-            </td>
-            <td>
-                <select name="spendingpayer" form="editspendinghead">
-                    <option></option>
-                    {% for person in budget.persons_list %}
-                    <option {% if person.name == spending.payer.name %} selected {% endif %} >{{person.name}}</option>
-                    {% endfor %}
-                </select>
-            </td>
-            <td>
-                <input type="image" alt="Ок" src="{{url_for('static', filename='ok.png')}}" class="pictobutton">
-            </td>
-        </tr>
-    </table>
-</form>
-
+<div class="card">
+    <!--<div class="card-header">-->
+        <!--<p class="text-info my-0">Заголовок</p>-->
+    <!--</div>-->
+    <div class="card-body">
+        <form name="editspendinghead" method="post" id="editspendinghead"
+              action="{{url_for('spending.edit_head')}}">
+            <div class="row justify-content-start">
+                <div class="col-auto">
+                    <div class="form-group">
+                        <label for="spendingDate">Дата</label>
+                        <input type="text" class="form-control" name="spendingdate" id="spendingDate"  value="{{spending.get_date_s()}}" size="10">
+                        <small class="form-text text-muted">Формат: ДД.ММ.ГГГГ</small>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <div class="form-group">
+                        <label for="spendingAmount">Сумма</label>
+                        <input type="text" class="form-control" name="spendingamount" id="spendingAmount"  value="{{spending.amount}}" size="10">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="spendingMemo">Описание</label>
+                        <input type="text" class="form-control" name="spendingmemo" id="spendingMemo"  value="{{spending.memo}}">
+                    </div>
+                </div>
+            </div>
+            <div class="row row align-items-center">
+                <div class="col-auto">
+                    <div class="form-group">
+                        <label for="spendingPayer">Оплатил</label>
+                        <select class="form-control" name="spendingpayer" id="spendingPayer">
+                            <option></option>
+                            {% for person in budget.persons_list %}
+                            <option {% if person.name == spending.payer.name %} selected {% endif %} >{{person.name}}</option>
+                            {% endfor %}
+                        </select>
+                        <small class="form-text text-info">Не забудьте отправить форму!</small>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <div class="form-group mx-1 align-self-center">
+                        <input type="image" alt="Ок" src="{{url_for('static', filename='ok.png')}}" class="pictobutton">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
 {% if spending.amount > 0 %}
 
-<h3>Потребители</h3>
+<h4 class="text-center pt-2">Потребители</h4>
 
+{% if spending.is_calculated() %}
+{% else %}
+<input class="btn btn-success my-1" name="addAll" type="submit" value="Добавить всех участников" form="addpersonID">
+{%endif%}
 
-
-<p></p>
-
-<table border="0" cellpadding="3" rules="rows">
-    <tr>
-        <td><b>Сумма</b></td>
-        <td><b>Имя</b></td>
-        <td></td>
-    </tr>
+<table class="table table-striped table-sm table-responsive-sm">
+    <thead class="thead-light">
+        <tr>
+            <th>Сумма</th>
+            <th>Имя</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
     {% for c in spending.consumers_list %}
     <tr>
         <td>{{"{0:8.2f}".format(c.amount)}}</td>
@@ -87,10 +106,10 @@
     <form method="post" name="addperson" id="addpersonID"
           action="{{url_for('spending.add_person')}}">
         <td>
-            <input name="amount" type="text" size="10" value="0">
+            <input class="form-control" name="amount" type="text" size="10" value="0">
         </td>
         <td>
-            <select name="name" form="addpersonID">
+            <select name="name" class="form-control" form="addpersonID">
                 {% for person in budget.persons_list %}<option>{{person.name}}</option>{% endfor %}
             </select>
         </td>
@@ -98,41 +117,53 @@
             <input name="addperson" type="image" src="{{url_for('static', filename='plus.png')}}" alt="Добавить"
                    class="pictobutton">
         </td>
-        <input name="addAll" type="submit" value="Потребляли все" form="addpersonID" class="button">
     </form>
     </tr>
     {% endif %}
+    </tbody>
 </table>
+
+{% if spending.consumers_list.__len__() > 0 %}
 <form method="post" name="calc"
       action="{{url_for('spending.calc')}}">
-    <input name="aver" type="submit" value="Поровну" class="button">
-    <input name="weighted" type="submit" value="C весом" class="button">
+    <div class="row">
+        <div class="form-group col">
+            <input name="aver" type="submit" value="Поровну" class="form-control btn btn-primary">
+            <small class="form-text text-info text-center">Среднее арифметическое</small>
+        </div>
+        <div class="form-group col">
+            <input name="weighted" type="submit" value="C весом" class="form-control btn btn-primary">
+            <small class="form-text text-info text-center">Среднее взвешенное</small>
+        </div>
+    </div>
 </form>
-<hr>
+{% endif %}
+
 {% if spending.is_calculated() %}
-<font color="green">Расход распределён</font>
+<h5 class="text-success text-center">Расход распределён</h5>
 {% else %}
-<font color="red">Не распределённая сумма: {{spending.get_undistributed_value()}}</font>
+<h5 class="text-danger text-center">Нераспределённая сумма: <span class="badge badge-danger">{{spending.get_undistributed_value()}}</span></h5>
 {% endif %}
 {% else %}
-<h5>
+<h5 class="text-info text-center">
 Укажите сумму и оплатившего для добавления потребителей.
 </h5>
 {% endif %}
 
-<hr>
 <form method="post" name="ok"
       action="{{url_for('spending.submit', index=index)}}">
-<table>
-    <tr>
-        {% if spending.is_calculated() and budget.is_participant(spending.payer.name) %}
-        <td><input name="ok" type="submit" value="Ок" class="button"></td>
-        {% else %}
-        <td><input name="ok" type="submit" value="Ок" disabled class="button"></td>
-        {% endif %}
-        <td><input name="cancel" type="submit" value="Отмена" class="button"></td>
-    </tr>
-</table>
+    <div class="row">
+        <div class="form-group col">
+            {% if spending.is_calculated() and budget.is_participant(spending.payer.name) %}
+            <input class="form-control btn-success" name="ok" type="submit" value="Ок">
+            {% else %}
+            <input class="form-control btn-secondary" disabled name="ok" type="submit" value="Ок">
+            {% endif %}
+        </div>
+        <div class="form-group col">
+            <input class="form-control btn-warning" name="cancel" type="submit" value="Отмена">
+        </div>
+    </div>
 </form>
 
 {% endblock %}
