--- a/templates/edit.html
+++ b/templates/edit.html
@@ -20,11 +20,11 @@
         <a href="{{url_for('print_budget', budget_file=budget_file)}}" title="Отчёт">
             <img src={{url_for('static', filename='report.png' )}} alt="Отчёт" border="0"
                  class="pictobutton mx-2"></a>
-        <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию"
+        <a href="{{url_for('copy_budget', budget_file=budget_file)}}" title="Создать копию"
            class="confirm-required" message="Создать копию бюджета &quot;{{budget_file[:-4:]}}&quot;?">
             <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
                  class="pictobutton mx-2"></a>
-        <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить"
+        <a href="{{url_for('delete_budget', budget_file=budget_file)}}" title="Удалить"
            class="confirm-required" message="Удалить бюджет &quot;{{budget_file[:-4:]}}&quot;?">
             <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
                  class="pictobutton mx-2"></a>
